# QmlAddressResolver

./: .gitignore  AddressModelHandler.cpp  AddressModelHandler.hpp  AddressSearchProcessingController.cpp  AddressSearchProcessingController.hpp  AddressStorage.cpp  AddressStorage.hpp  CMakeLists.txt  ProcessingCore.cpp  ProcessingCore.hpp  README.md  WordListModel.hpp  main.cpp  qml.qrc
qml_ui/: SearchPopup.qml  main.qml
